--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/pokemonFavicon.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon Vite App</title>
+    <title>Pokemon MEVN App</title>
   </head>
   <body>
     <div id="app"></div>
